--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,9 @@ repositories {
 }
 
 dependencies {
+
+/*	implementation 'org.springframework.boot:spring-boot-starter-security'*/
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.session:spring-session-core'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
