Trying to run app on database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=postgres://qnjermns:bvOddz...@balarama.db.elephantsql.com:5432/qnjermns 
+spring.datasource.url=jdbc:postgresql://balarama.db.elephantsql.com:5432/qnjermns?user=qnjermns&password=bvOddzGm9OoOHu5vOw7El6i3teEsHc0L
 spring.datasource.username=qnjermns
 spring.datasource.password=bvOddzGm9OoOHu5vOw7El6i3teEsHc0L
 
