--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,12 @@ repositories {
 dependencies {
 
 /*	implementation 'org.springframework.boot:spring-boot-starter-security'*/
-/*	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'*/
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.session:spring-session-core'
+
+	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.14'
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
